--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.caiqueponjjar.cuco">
+    package="com.caiqueponjjar.finapp">
 
     <application
         android:allowBackup="true"
@@ -25,11 +25,11 @@
          </service>
         -->
         <activity
-            android:name=".withGoogle"
+            android:name="com.caiqueponjjar.finapp.withGoogle"
             android:exported="true"
             android:theme="@style/Theme.Cuco" />
         <activity
-            android:name=".SelectLogin"
+            android:name="com.caiqueponjjar.finapp.SelectLogin"
             android:exported="true"
             android:theme="@style/Theme.Cuco">
             <intent-filter>
@@ -39,12 +39,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name="com.caiqueponjjar.finapp.ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.caiqueponjjar.finapp.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Cuco" />
     </application>
