--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,32 @@
              android:enabled="true" >
          </service>
         -->
+        <service
+            android:name="com.caiqueponjjar.finapp.NotificationService"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+        <receiver
+
+            android:exported="true"
+            android:name="com.caiqueponjjar.finapp.IncomingSms">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+
+            android:exported="true"
+            android:name="ServiceReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
+        <!---->
         <activity
             android:name="com.caiqueponjjar.finapp.withGoogle"
             android:exported="true"
